--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 #container
 {
-	/*border: 3px solid black;*/
+	border: 3px solid black;
 	max-width: 400px;
+	max-height: 400px;
 	padding: 10px;
 	margin: 0 auto;
 	text-align: center;
@@ -18,6 +19,7 @@
 	margin: 5px;
 	box-shadow: 10px 5px 5px black;
 	border-radius: 10px;
+	/*float: left;*/
 }
 
 h1 
