--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,6 @@
 	margin: 0 auto;
 	text-align: center;
 	border-radius: 10px;
-
 }
 
 .boxes 
@@ -32,4 +31,31 @@ h1
 body
 {
 	text-align: center;
+}
+
+button
+{
+	/*margin: 0 auto;*/
+
+	/*display: inline-block;*/
+	border: 1px solid black;
+	/*float: left;*/
+	/*margin: 5px;*/
+	box-shadow: 10px 5px 5px black;
+	border-radius: 10px;
+	background-color: none;
+}
+/**************************************
+                 images 
+*****************************************/
+
+.x
+{
+	background-image: url('../images/tttX.png');
+
+}
+
+.o
+{
+	background-image: url('../images/tttO.png');
 }
