--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 #container
 {
-	/*border: 3px solid black;*/
-	max-width: 400px;
+/*	border: 3px solid black;
+*/	max-width: 400px;
 	max-height: 400px;
 	padding: 10px;
 	margin: 0 auto;
@@ -22,6 +22,10 @@
 	border-radius: 10px;
 	font-size: 5em;
 
+}
+
+button {
+	margin: 20px;
 }
 
 h1 
