--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,14 @@
+@font-face
+{
+	font-family: "ostrich";
+	src: url('ostrich-regular.ttf');
+}
+
+
 #container
 {
-/*	border: 3px solid black;
-*/	max-width: 400px;
+	/*border: 3px solid black;*/
+	max-width: 400px;
 	max-height: 400px;
 	padding: 10px;
 	margin: 0 auto;
@@ -20,12 +27,8 @@
 	margin: 5px;
 	box-shadow: 10px 5px 5px black;
 	border-radius: 10px;
-	font-size: 5em;
+	font-size: 7em;
 
-}
-
-button {
-	margin: 20px;
 }
 
 h1 
@@ -35,12 +38,13 @@ h1
 
 body
 {
+	font-family: "ostrich";
 	text-align: center;
 }
 
 button
 {
-	/*margin: 0 auto;*/
+	margin: 20px;
 
 	/*display: inline-block;*/
 	border: 1px solid black;
@@ -49,18 +53,4 @@ button
 	box-shadow: 10px 5px 5px black;
 	border-radius: 10px;
 	background-color: none;
-}
-/**************************************
-                 images 
-*****************************************/
-
-.x
-{
-	background-image: url('../images/tttX.png');
-
-}
-
-.o
-{
-	background-image: url('../images/tttO.png');
 }
