added css background.

--- a/css/main.css
+++ b/css/main.css
@@ -4,16 +4,40 @@
 	src: url('ostrich-regular.ttf');
 }
 
+h1 
+{
+	text-align: center;
+	font-size: 2em;
+}
+h2
+{
+	font-size: 3em;
+}
+
+body
+{
+	font-family: "ostrich";
+	text-align: center;
+
+  	background: -webkit-gradient(linear, left top, left bottom, from(#4d85a3), to(#1a3e54));
+   background: -webkit-linear-gradient(top, #4d85a3, #1a3e54);
+   background: -moz-linear-gradient(top, #4d85a3, #1a3e54);
+   background: -ms-linear-gradient(top, #4d85a3, #1a3e54);
+   background: -o-linear-gradient(top, #4d85a3, #1a3e54);
+   background-repeat: repeat-x, repeat;
+
+}
 
 #container
 {
 	/*border: 3px solid black;*/
 	max-width: 400px;
-	max-height: 400px;
+	max-height: 600px;
 	padding: 10px;
 	margin: 0 auto;
 	text-align: center;
 	border-radius: 10px;
+
 }
 
 .boxes 
@@ -28,32 +52,28 @@
 	box-shadow: 10px 5px 5px black;
 	border-radius: 10px;
 	font-size: 7em;
+	background-color: white
 }
 
-h1 
-{
-	text-align: center;
-}
-h2
-{
-	font-size: 3em;
-}
+button {
 
-body
-{
+	width: 70px;
+	font-weight: 1em;
 	font-family: "ostrich";
-	text-align: center;
-}
-
-button
-{
-	margin: 20px;
-
-	/*display: inline-block;*/
-	border: 1px solid black;
-	/*float: left;*/
-	/*margin: 5px;*/
-	box-shadow: 5px 5px 5px black;
-	border-radius: 10px;
-	background-color: none;
+	margin: 30px;
+	border-top: 1px solid #5d717d;
+	background: #8a9ba6;
+	background: -webkit-gradient(linear, left top, left bottom, from(#868f96), to(#8a9ba6));
+	background: -webkit-linear-gradient(top, #868f96, #8a9ba6);
+	background: -moz-linear-gradient(top, #868f96, #8a9ba6);
+	background: -ms-linear-gradient(top, #868f96, #8a9ba6);
+	background: -o-linear-gradient(top, #868f96, #8a9ba6);
+	/*padding: 4.5px 9px;*/
+	-webkit-border-radius: 40px;
+	-moz-border-radius: 40px;
+	border-radius: 40px;
+	-webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+	-moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+	box-shadow: rgba(0,0,0,1) 0 1px 0;
+   /*text-shadow: rgba(0,0,0,.4) 0 1px 0;*/
 }
