added message to newGame() to say player's one move

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 @font-face
 {
 	font-family: "ostrich";
+	/*font-family: "ostrich-bold";*/
+	/*src: url('ostrich-bold.ttf');*/
 	src: url('ostrich-regular.ttf');
 }
 
